fixed more spacing of content

--- a/css/subpage.scss
+++ b/css/subpage.scss
@@ -3,9 +3,16 @@
   padding: 0;
   width: 100vw;
 }
+
 .row{
   margin: 0;
 }
+
+.main-container .row .col-sm-12 {
+    margin: 0;
+    padding: 0;
+}
+
 .region-content section {
     width: 92%;
     margin: auto;
@@ -28,4 +35,5 @@
   transform: translateY(-50%) translateX(-50%);
 
   color: white;
+  font-weight: bold;
 }
